tests/NormalTests/paczka1/small_fuzzy/95836873.err
Error in line 1: WhA3Ds7q A868 48,3
Error in line 7: rXP7YZgt A374 24,0
